--- a/module-admin/src/main/resources/templates/layout/head.html
+++ b/module-admin/src/main/resources/templates/layout/head.html
@@ -16,6 +16,10 @@
         <meta name="description" content="#">
         <meta name="keywords" content="Admin , Responsive, Landing, Bootstrap, App, Template, Mobile, iOS, Android, apple, creative app">
         <meta name="author" content="#">
+
+        <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+        <!-- default header name is X-CSRF-TOKEN -->
+        <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
         <!-- Favicon icon -->
         <link rel="icon" th:href="@{/files/assets/images/fafvicon1.png}" type="image/x-icon">
         <!-- Google font-->
